resize padding on title wrap at issue and board view

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2534,7 +2534,7 @@
     display:block; 
     clear:both;
     height:30px; 
-    padding: 15px 20px;
+    padding: 10px 20px;
     border:none;
     background-color:@yobi-white-dark;
     .border-radius(10px);
